Funcionan las Rutas

--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <a href="https://www.flaticon.es/iconos-gratis/f1" title="f1 iconos">F1 iconos creados por Freepik - Flaticon</a> -->
+    <!-- <link rel="icon" type="image/svg+xml" href="/f1.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Formula 1</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-</html>asd
+</html>
